# number-formatter

./: README.md  pyproject.toml
app/: constants.py  main.py  router.py  routers.py  schemas.py  services.py  test_main.py
tests/: test_number_formatter.py
