[tool.poetry]
name = "number-formatter"
version = "0.1.0"
description = ""
authors = ["Ehsan Barkhordar <barkhordar.me@gmail.com>"]
readme = "README.md"
packages = [{include = "number_formatter"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
